--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,20 @@
 	<title></title>
 </head>
 <body>
-	<h1>Cars</h1>
+	<h1>Cars </h1>
 	<ul>
 		<% for(let i = 0; i < cars.length; i++){ %>
 			<li>
-			   <a href="/cars/<%=cars[i]._id%>"><%cars[i].make; %></a>, <%cars[i].model; %> from the year <%cars[i].year;%> is being sold for <%cars[i].price;%> dollars.
-
+			   <a href="/cars/<%=cars[i]._id%>">
+			   	<%= cars[i].make; %></a>, <%= cars[i].model %> from the year <%= cars[i].year%> is being sold for <%= cars[i].price%> dollars.
+                  <form action="/cars/<%=cars[i]._id%>?_method=DELETE" method="POST" >
+                    <input type="submit" value="DELETE"/>
+                  </form>
 			</li>
 		<%}%>
 	</ul>
-
+	<nav>
+		<a href="/cars/new">Add New Car</a>
+	</nav>
 </body>
 </html>
-
-model year price
